--- a/chrome/components/one_tabs-bar.css
+++ b/chrome/components/one_tabs-bar.css
@@ -327,6 +327,17 @@ spacer{
     background-position: center top calc(0px + var(--tabs-navbar-shadow-size)) !important;
 }
 
+/* Tab Preview */
+
+.tab-preview-thumbnail-container {
+    height: -moz-available !important;
+    width: -moz-available !important;
+    border: 1px solid transparent !important;
+    border-top-style: dotted !important;
+    border-top-color: var(--panel-separator-color) !important;
+    clip-path: xywh(0 0 100% 100% round 0 0 8px 8px) !important;
+}
+
 /* Code to tabs-bar reach lower height that 30px */
 
 #titlebar{ appearance: none !important; }
