--- a/chrome/components/one_UC-newtabpage.css
+++ b/chrome/components/one_UC-newtabpage.css
@@ -69,119 +69,141 @@
 
         /* Dark 1 - Fuchsia */
         #dark-sky,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/e94b1e49-c518-40d6-98e3-dffab6cc370d.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/e94b1e49-c518-40d6-98e3-dffab6cc370d.avif);"]{
+        #photographs[style*='e94b1e49-c518-40d6-98e3-dffab6cc370d.avif'],
+        body[style*="e94b1e49-c518-40d6-98e3-dffab6cc370d.avif"]{
             background-image: var(--wallpaper-dark1) !important;
         }
 
         /* Dark 2 - Ultraviolet */
         #dark-mountain,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/af6073d2-cbb2-4e28-b642-3327d14808b2.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/af6073d2-cbb2-4e28-b642-3327d14808b2.avif);"]{
+        #photographs[style*='af6073d2-cbb2-4e28-b642-3327d14808b2.avif'],
+        body[style*="af6073d2-cbb2-4e28-b642-3327d14808b2.avif"]{
             background-image: var(--wallpaper-dark2) !important;
         }
 
         /* Dark 3 - Blue */
         #dark-panda,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/6b8eb3cf-f232-4c7b-a179-afd174555134.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/6b8eb3cf-f232-4c7b-a179-afd174555134.avif);"]{
+        #photographs[style*='6b8eb3cf-f232-4c7b-a179-afd174555134.avif'],
+        body[style*="6b8eb3cf-f232-4c7b-a179-afd174555134.avif"]{
             background-image: var(--wallpaper-dark3) !important;
-        }   
-
-        /* Dark 4 - Swamp */
-        #dark-landscape,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/10e23599-85bc-4660-ae06-7a67befbbcf9.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/10e23599-85bc-4660-ae06-7a67befbbcf9.avif);"]{
+        }
+        
+        /* Dark 4 - Green */
+        #dark-fox-anniversary,
+        #photographs[style*='d8b71c77-9985-41d2-b98e-51bebc60e595.avif'],
+        body[style*="d8b71c77-9985-41d2-b98e-51bebc60e595.avif"]{
             background-image: var(--wallpaper-dark4) !important;
         }
 
-        /* Dark 5 - Gray */
-        #dark-beach,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/966b18ad-3733-41c4-92f6-c89cdf1381d0.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/966b18ad-3733-41c4-92f6-c89cdf1381d0.avif);"]{
+        /* Dark 5 - Swamp */
+        #dark-landscape,
+        #photographs[style*='10e23599-85bc-4660-ae06-7a67befbbcf9.avif'],
+        body[style*="10e23599-85bc-4660-ae06-7a67befbbcf9.avif"]{
             background-image: var(--wallpaper-dark5) !important;
+        }
+
+        /* Dark 6 - Gray */
+        #dark-beach,
+        #photographs[style*='966b18ad-3733-41c4-92f6-c89cdf1381d0.avif'],
+        body[style*="966b18ad-3733-41c4-92f6-c89cdf1381d0.avif"]{
+            background-image: var(--wallpaper-dark6) !important;
         }
 
         /* Light 1 - Fuchsia */
         #light-panda,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif);"]{
+        #photographs[style*='dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif'],
+        body[style*="dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif"]{
             background-image: var(--wallpaper-light1) !important;
         }
 
         /* Light 2 - Ultraviolet */
         #light-landscape,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif);"]{
+        #photographs[style*='d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif'],
+        body[style*="d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif"]{
             background-image: var(--wallpaper-light2) !important;
         }
 
         /* Light 3 - BLue */
         #light-mountain,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/5344443f-f427-4029-bc6b-68bc22f83355.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/5344443f-f427-4029-bc6b-68bc22f83355.avif);"]{
+        #photographs[style*='5344443f-f427-4029-bc6b-68bc22f83355.avif'],
+        body[style*="5344443f-f427-4029-bc6b-68bc22f83355.avif"]{
             background-image: var(--wallpaper-light3) !important;
         }
 
         /* Light 4 - Rose */
         #light-sky,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif);"]{
+        #photographs[style*='45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif'],
+        body[style*="45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif"]{
             background-image: var(--wallpaper-light4) !important;
         }
 
-        /* Light 5 - Green */
+        /* Light 5 - Lightgreen */
         #light-beach,
-        #photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif");'],
-        body[style*="--newtab-wallpaper-light: url(https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif);"]{
+        #photographs[style*='56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif'],
+        body[style*="56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif"]{
             background-image: var(--wallpaper-light5) !important;
+        }
+        
+        /* Light 6 - Orange */
+        #light-fox-anniversary,
+        #photographs[style*='a5a041de-9275-4eb5-8f21-a0171c82d388.avif'],
+        body[style*="a5a041de-9275-4eb5-8f21-a0171c82d388.avif"]{
+            background-image: var(--wallpaper-light6) !important;
         }
     }
     
     /* Accent color for each wallpaper */
     
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/e94b1e49-c518-40d6-98e3-dffab6cc370d.avif");']){
+    :root:has(#photographs[style*='e94b1e49-c518-40d6-98e3-dffab6cc370d.avif"']){
         --general-color: var(--general-color-dark1) !important;    }
 
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/af6073d2-cbb2-4e28-b642-3327d14808b2.avif");']){
+    :root:has(#photographs[style*='af6073d2-cbb2-4e28-b642-3327d14808b2.avif']){
         --general-color: var(--general-color-dark2) !important;    }
     
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/6b8eb3cf-f232-4c7b-a179-afd174555134.avif");']){
+    :root:has(#photographs[style*='6b8eb3cf-f232-4c7b-a179-afd174555134.avif']){
         --general-color: var(--general-color-dark3) !important;    }
-
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/10e23599-85bc-4660-ae06-7a67befbbcf9.avif");']){
+    
+    :root:has(#photographs[style*='d8b71c77-9985-41d2-b98e-51bebc60e595.avif']){
         --general-color: var(--general-color-dark4) !important;    }
 
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/966b18ad-3733-41c4-92f6-c89cdf1381d0.avif");']){
+    :root:has(#photographs[style*='10e23599-85bc-4660-ae06-7a67befbbcf9.avif']){
         --general-color: var(--general-color-dark5) !important;    }
 
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif");']){
+    :root:has(#photographs[style*='966b18ad-3733-41c4-92f6-c89cdf1381d0.avif']){
+        --general-color: var(--general-color-dark6) !important;    }
+
+    :root:has(#photographs[style*='dfd3762e-f77d-4b6e-ac75-32eb2549ef40.avif']){
         --general-color: var(--general-color-light1) !important;   }
 
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif");']){
+    :root:has(#photographs[style*='d9289c5b-8c78-4b27-b5d8-afe7285ce7d1.avif']){
         --general-color: var(--general-color-light2) !important;   }
 
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/5344443f-f427-4029-bc6b-68bc22f83355.avif");']){
+    :root:has(#photographs[style*='5344443f-f427-4029-bc6b-68bc22f83355.avif']){
         --general-color: var(--general-color-light3) !important;   }
 
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif");']){
+    :root:has(#photographs[style*='45ecab20-ffb9-47b4-94ff-07a5f8b9f53f.avif']){
         --general-color: var(--general-color-light4) !important;   }
 
-    :root:has(#photographs[style='background-image: url("https://firefox-settings-attachments.cdn.mozilla.net/main-workspace/newtab-wallpapers-v2/56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif");']){
+    :root:has(#photographs[style*='56a7f3ae-70cc-45f2-82ec-1d39acdd3b8d.avif']){
         --general-color: var(--general-color-light5) !important;   }
+    
+    :root:has(#photographs[style*='a5a041de-9275-4eb5-8f21-a0171c82d388.avif']){
+        --general-color: var(--general-color-light6) !important;   }
     
     /* rearrangement of wallpapers */
     
-    #dark-sky { order: 1 !important; }    
+    #dark-sky { order: 1 !important; }
     #dark-mountain { order: 2 !important; }
-    #dark-panda { order: 3 !important; }    
-    #dark-landscape { order: 4 !important; }
-    #dark-beach { order: 5 !important; }    
-    #light-panda { order: 6 !important; }    
-    #light-landscape { order: 7 !important; }    
-    #light-mountain { order: 8 !important; }    
-    #light-sky { order: 9 !important; }    
-    #light-beach { order: 10 !important; }
+    #dark-panda { order: 3 !important; }
+    #dark-fox-anniversary { order: 4 !important;}
+    #dark-landscape { order: 5 !important; }
+    #dark-beach { order: 6 !important; }
+    #light-panda { order: 7 !important; }
+    #light-landscape { order: 8 !important; }
+    #light-mountain { order: 9 !important; }
+    #light-sky { order: 10 !important; }
+    #light-beach { order: 11 !important; }
+    #light-fox-anniversary { order: 12 !important;}
         
     /* Border color when 'hover' over wallpapers */
 
