--- a/chrome/components/one_tabs-bar.css
+++ b/chrome/components/one_tabs-bar.css
@@ -66,7 +66,7 @@ toolbar #firefox-view-button[aria-pressed="true"]:hover .toolbarbutton-icon {
 
 .tabbrowser-tab[selected] { z-index: 1 !important; }
 
-#titlebar{
+#TabsToolbar{
   will-change: unset !important;
   transition: none !important;
   opacity: 1 !important;
@@ -387,31 +387,7 @@ spacer{
     outline-offset: -1px !important;
     }}
 
-/* _______________________________________________________ Menu-bar sin Tree-tab style _______________________________________________________ */
-
-@media not (-moz-bool-pref:"firefoxone.tree_tabs_style") {
-
-:root:not([customizing]) #titlebar{
-  -moz-box-orient: horizontal; /* Fx <112 compatibility */
-  flex-direction: row;
-}
-#toolbar-menubar[autohide="false"] > .titlebar-buttonbox-container,
-#toolbar-menubar[autohide="false"] > spacer{ display: none; }
-
-#main-menubar[autohide="false"]{
-  -moz-box-flex: 1; /* Fx <112 compatibility */
-  flex-grow: 1 !important;
-}
-:root:not([customizing]) #toolbar-menubar[autohide="false"][inactive]{ max-width: 0 }
-
-#TabsToolbar > .titlebar-buttonbox-container{
-  display: flex !important;
-  visibility: visible !important;
-}
-
-#TabsToolbar > .titlebar-spacer[type="post-tabs"]{
-  display: flex !important;
-}
+/* _______________________________________________________ Menu-bar _______________________________________________________ */
 
 /* __ Menubar Flotante __ */
 
@@ -424,51 +400,71 @@ spacer{
     z-index: 10;
 }
 
+#toolbar-menubar[autohide="false"] #main-menubar{
+    background-image: linear-gradient(var(--lwt-frame), var(--lwt-frame)),
+        linear-gradient(transparent, transparent),
+        var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
+    box-shadow: none !important;
+    border-radius: 0px !important; /* Remove unwanted colored pixels in he corners */
+}
+
+#toolbar-menubar[autohide="true"] #main-menubar{
+    height: calc(var(--tab-min-height) + var(--tab-block-margin,0px) + 8px) !important;
+    background-image: linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)),
+                      linear-gradient(transparent, transparent), 
+                      var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
+    background-position: right top, right top, right top, left top !important;
+    background-repeat: repeat, repeat, var(--lwt-background-tiling) !important;
+    background-size: auto !important;
+}
+
 #toolbar-menubar[autohide="true"][inactive="true"]{ height: 0px !important; }
 
 #toolbar-menubar > spacer{ flex-grow: 1 }
 #toolbar-menubar[inactive] > .titlebar-buttonbox-container{ display: none }
 
 #main-menubar{
-    height: calc(var(--tab-min-height) +  1 * var(--tab-block-margin,0px) + 5px);
-    background-image: linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)),
-                      linear-gradient(transparent, transparent), 
-                      var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
-    background-position: right top, right top, right top, left top, right top !important;
-    background-repeat: repeat, repeat, var(--lwt-background-tiling) !important;
-    background-size: auto !important; 
     color: var(--arrowpanel-color);
-    border-radius: 8px !important;
-    box-shadow: inset 0 4px var(--lwt-frame), inset 0 4px var(--lwt-frame), inset 0 4px var(--lwt-frame) !important;
+    border-radius: 6px !important;
+    box-shadow: 
+        inset 0 4px var(--lwt-frame), inset 0 4px var(--lwt-frame), inset 0 4px var(--lwt-frame),
+        inset 0 -4px var(--lwt-frame), inset 0 -4px var(--lwt-frame), inset 0 -4px var(--lwt-frame) !important;
+    outline: 2px solid var(--lwt-frame) !important;
 }
 
-#menubar-items{
-    -moz-box-orient: horizontal !important; /* Fx <112 compatibility */
-    flex-direction: row !important;
-}
-#toolbar-menubar[autohide="true"] #menubar-items::after{
-    content: "";
-    display: flex;
-    width: 30px;
-    height: calc(var(--tab-min-height) +  1 * var(--tab-block-margin,0px) + 5px);
-    background-image: linear-gradient(to right, var(--lwt-frame)30%, transparent) !important;  
-}
+@media not (-moz-bool-pref:"firefoxone.tree_tabs_style") {
+
+    /* Used for shadow on menubar right side */
+
+    #menubar-items{
+        flex-direction: row !important;
+    }
     
+    #toolbar-menubar[autohide="true"] #menubar-items::after{
+        content: "";
+        display: flex;
+        width: 30px;
+        height: calc(var(--tab-min-height) + var(--tab-block-margin,0px) + 8px) !important;
+        background-image: linear-gradient(to right, var(--lwt-frame)30%, transparent) !important;  
+    }
+}
+
 /* Border in -non default colors- config - solid themes */
 @media (-moz-bool-pref:"firefoxone.without-default-colors") {
     #main-menubar{
-          box-shadow: inset 0 1px 0 0 var(--lwt-frame), inset 0 1px 0 0 var(--lwt-frame),inset 0 1px 0 0 var(--lwt-frame),
-                      inset 0px -1px 0 0  var(--general-border-color),  /* abajo */
-                      inset 0 4px var(--lwt-frame),
-                      inset 0px 5px 0 0  var(--general-border-color),   /* top */
-                      inset -1px 0 0 0  var(--general-border-color),    /* right */ 
-                      inset 1px 0 0 0  var(--general-border-color)      /* Left */
-                      !important;
-        }}
+        box-shadow: inset 0 1px 0 0 var(--lwt-frame), inset 0 1px 0 0 var(--lwt-frame),inset 0 1px 0 0 var(--lwt-frame),
+            inset 0 -4px var(--lwt-frame),
+            inset 0px -5px 0 0  var(--general-border-color),  /* abajo */
+            inset 0 4px var(--lwt-frame),
+            inset 0px 5px 0 0  var(--general-border-color),   /* top */
+            inset -1px 0 0 0  var(--general-border-color),    /* right */ 
+            inset 1px 0 0 0  var(--general-border-color)      /* Left */
+            !important;
+    }}
 
 @media (-moz-gtk-csd-reversed-placement){
-  #toolbar-menubar[autohide="true"]:not([inactive]) > .titlebar-buttonbox-container{ display: none }  
-}}
+    #toolbar-menubar[autohide="true"]:not([inactive]) > .titlebar-buttonbox-container{ display: none }  
+}
 
 /* _____________________________________________________________ Menu-bar style _____________________________________________________________ */
 
@@ -476,17 +472,22 @@ spacer{
 
 :root:is([style*="--lwt-additional-images"],[lwtheme-image]) #main-menubar{
     box-shadow: inset 0 1px 0 0 var(--lwt-frame), inset 0 1px 0 0 var(--lwt-frame),inset 0 1px 0 0 var(--lwt-frame),
-                inset 0px -1px 0 0  var(--general-border-color),  /* abajo */
-                inset 0 4px var(--lwt-frame),
-                inset 0px 5px 0 0  var(--general-border-color),   /* Top */
-                inset -1px 0 0 0  var(--general-border-color),    /* right */ 
-                inset 1px 0 0 0  var(--general-border-color)      /* Left */
-                !important;
+        inset 0 -4px var(--lwt-frame),
+        inset 0px -5px 0 0  var(--general-border-color),  /* abajo */
+        inset 0 4px var(--lwt-frame),
+        inset 0px 5px 0 0  var(--general-border-color),   /* Top */
+        inset -1px 0 0 0  var(--general-border-color),    /* right */ 
+        inset 1px 0 0 0  var(--general-border-color)      /* Left */
+        !important;
 }
 
 /* __ Menu trick rounded border __*/
 
 /* Barra de menú */
+
+#main-menubar{
+    height: var(--menubar-height-personal) !important;
+}
 
 #main-menubar>menu {
     text-shadow: none !important;
@@ -494,17 +495,13 @@ spacer{
     background-color: transparent !important;
 }
 
-#main-menubar>menu>label{
-    margin-bottom: 3px !important;
-}
-
 #main-menubar>menu:is(:hover, [open]){
     background-color: transparent !important;
 }
 
 #main-menubar>menu>label{
-    padding: 4px 5px 5px 5px !important;
-    border-radius: var(--toolbarbutton-border-radius) !important;
+    padding: 3px 5px 4px 5px !important;
+    border-radius: 4px !important;
     transition: background-color 0.2s ease;
 }
 
@@ -514,19 +511,13 @@ spacer{
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
-#toolbar-menubar {
-    padding-inline-start: calc(var(--padding-left-tab) + 9px) !important;
-    height: -moz-available !important;
-    }
-
 #toolbar-menubar>toolbaritem>menubar>menu {
     background-clip: content-box !important;
-    border-top: 6px solid transparent !important;
-    }
+}
 
 :root:not([chromehidden~="toolbar"]) #toolbar-menubar[autohide="false"]+#TabsToolbar {
-    padding-inline-start: 4px !important;
-    }
+    padding-inline: 4px 2px !important;
+}
 
 /* _______________________ Configuration for Linux _______________________ */
 
